--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <script type="text/javascript" charset="UTF-8">window.location = "https://balakethelock.github.io/TankSim";</script>
+    <script type="text/javascript" charset="UTF-8">window.location = "https://anon-doofus.github.io/TankSim";</script>
 </head>
 </html>
