--- a/TankSim/index.html
+++ b/TankSim/index.html
@@ -118,6 +118,7 @@
                                 <option value="R10 Plate Helm">R10 Plate Helm</option>
                                 <option value="R13 Plate Helm">R13 Plate Helm</option>
                                 <option value="Raging Berserker's Helm">Raging Berserker's Helm</option>
+                                <option value="Bloody Gladiator's Helm">Bloody Gladiator's Helm</option>
                             </select>
 
                         </div>
@@ -236,6 +237,7 @@
                                 <option value="Tombstone Breastplate">Tombstone Breastplate</option>
                                 <option value="Traphook Jerkin">Traphook Jerkin</option>
                                 <option value="Vest of Swift Execution">Vest of Swift Execution</option>
+                                <option value="Bloody Gladiator's Breastplate">Bloody Gladiator's Breastplate</option>
                             </select>
                         </div>
         
@@ -617,6 +619,7 @@
                         <option value="None">None</option>
                         <option value="Might of the Scourge">Might of the Scourge</option>
                         <option value="Zandalar Signet of Might">Zandalar Signet of Might</option>
+                        <option value="Zandalar Signet of Tenacity">Zandalar Signet of Might</option>
                     </select>
                 </div>
 
