--- a/TankSim/index.html
+++ b/TankSim/index.html
@@ -619,7 +619,7 @@
                         <option value="None">None</option>
                         <option value="Might of the Scourge">Might of the Scourge</option>
                         <option value="Zandalar Signet of Might">Zandalar Signet of Might</option>
-                        <option value="Zandalar Signet of Tenacity">Zandalar Signet of Might</option>
+                        <option value="Zandalar Signet of Tenacity">Zandalar Signet of Tenacity</option>
                     </select>
                 </div>
 
